RESOLVED FIXED11212
REGRESSION: Activity window doesn't always list all files until refresh
https://bugs.webkit.org/show_bug.cgi?id=11212
Summary REGRESSION: Activity window doesn't always list all files until refresh
Kevin M. Dean
Reported 2006-10-07 20:17:34 PDT
This actually applies to any web site, but I'm using the Webkit site as an example. Whenever you visit a page initially and look in the Activity window, you'll see all the referenced files. After going to another page and returning most of the files are no longer lists until you manually refresh the page. For example: With the Activity window open, go to http://webkit.org/ You should see a variety of files like css, png, etc. Click on the Home link at the top left and the page will reload, but only the page link and maybe some other files will be listed, but all the css and png files will be missing. Select the Refresh button or press Command-R and all the files will return. Works correctly in Safari.
Attachments
Alexey Proskuryakov
Comment 1 2006-10-15 04:23:01 PDT
Confirmed the behavior as described. But playing the devil's advocate, I'm not sure if this is a bug - there is no network activity for these cached subresources, so they needn't be in the Activity window.
Kevin M. Dean
Comment 2 2006-10-15 06:04:31 PDT
Depends on whether you define activity as limited to just network or network/file access. I think it should remain as it is in Safari since it's very useful to be able to access the files utilized for a page directly without needing to dig through the source.
John Sullivan
Comment 3 2006-10-15 07:02:33 PDT
This is definitely a bug. The activity window (though its name is not clear about this) is definitely supposed to list all the subresources, whether cached or not. The fact that they aren't appearing means that WebKit is not sending the delegate callbacks for these cached images, which is indeed a regression.
Maciej Stachowiak
Comment 4 2006-10-24 20:56:38 PDT
There's a call up to WebKit for resources loaded from the WebCore memory cache. This may have been broken. Oddly though, this seems to work fine if you load webkit.org in a new window, which should get the exact same caching!
Kevin M. Dean
Comment 5 2007-01-24 11:00:44 PST
This bug seems to be back again, failing in the same way has before.
Stephanie Lewis
Comment 6 2007-01-27 20:08:12 PST
Anders Carlsson
Comment 7 2007-04-04 11:06:29 PDT
The reason this happens is because of the commented out line in FrameLoader::clear
Robert Blaut
Comment 8 2008-02-21 14:19:08 PST
*** Bug 16198 has been marked as a duplicate of this bug. ***
Kevin M. Dean
Comment 9 2008-05-31 18:49:14 PDT
20 months later, if it's just the commented out line, wouldn't that be an easy fix?
Darin Adler
Comment 10 2009-01-02 18:05:28 PST
Note You need to log in before you can comment on or make changes to this bug.