        Reviewed by Mitz.

- fixed "REGRESSION: Activity window doesn't always list all files until refresh"
        http://bugs.webkit.org/show_bug.cgi?id=11212

        I couldn't figure out how to write a test case.

        * bindings/js/kjs_window.cpp:
        (KJS::Window::clear): Avoid crashing if already detached.
        * bridge/mac/FrameMac.h:
        * bridge/mac/FrameMac.mm:
        (WebCore::FrameMac::clear): Change prototype to make this a proper
        overload for Frame::clear once again(!).



Canonical link: https://commits.webkit.org/14551@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17285 268f45cc-cd09-0410-ab3c-d52691b4dbfc